--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,33 +1,20 @@
 <h1>Books</h1>
 <% @books.each do |book| %>
-  <p>Title</p>
-  <span><%= book.title %></span>
-  <span><%= book.body %></span>
 
-
-  <tr>
-    <td>リーダブルコード</td>
-    <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-
-    <td>トラブル知らずのシステム設計</td>
-    <td>システム設計の要点を図解で説明してくれます</td>
-
-    <td>たのしいRuby</td>
-    <td>Rubyの入門におすすめです</td>
-
-    <td>入門Git</td>
-    <td>gitについての基本操作から内部構造まで解説してくれます</td>
-
-    <td>アルゴリズム図鑑</td>
-    <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
-
-    <td>達人プログラマー</td>
-    <td>プログラマ入門者は必読！</td>
-
-    <td>データベース実践入門</td>
-    <td>効率的なSQL文を教えてくれます</td>
-  </tr>
+<table>
+  <th>Title</th>
+  <th>Body</th>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+  
+    <td><%= link_to "Show", "/books/#{book.id}" %></td>
+    <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
+    <td><%= link_to "Destroy" %></td>
+  
+</table>
+  
 <% end  %>
+
 
 
 <%= form_with model: @book, url: '/books', method: :post  do |f| %>
