--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,6 @@
-<p>Book was successfully created.</p>
+<div>
+  <%= flash[:notice] %>
+</div>
 
 <p><strong>Title:</strong><%=@book.title%></p>
 <p><strong>Body:</strong><%=@book.body%></p>
