--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <h1>Books</h1>
 <% @books.each do |book| %>
 
@@ -10,7 +14,6 @@
     <td><%= link_to "Show", "/books/#{book.id}" %></td>
     <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
     <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
-
 </table>
 
 <% end  %>
@@ -20,6 +23,15 @@
 <%= form_with model: @book, url: '/books', method: :post  do |f| %>
 
   <h2>New book</h2>
+
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
   <h4>Title</h4>
   <%= f.text_field :title %>
