--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,12 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <h1>Editing Book</h1>
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
 
@@ -7,7 +16,7 @@
 <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Update Book' %>
 <% end %>
 
 <span>
