--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,14 +2,19 @@
 
 <% @books.each do |book| %>
 <table>
-  <th>Title</th>
-  <th>Body</th>
+  <thead>
+    <th>Title</th>
+    <th>Body</th>
+  </thead>
+  
+  <tbody>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
 
     <td><%= link_to "Show", "/books/#{book.id}" %></td>
     <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
     <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+  </tbody>
 </table>
 <% end  %>
 
