--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>error prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -8,7 +8,7 @@
 <% end %>
 
 <h1>Editing Book</h1>
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+<%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
 <h4>Title</h4>
   <%= f.text_field :title %>
@@ -20,7 +20,7 @@
 <% end %>
 
 <span>
-    <%= link_to "Show", "/books/#{@book.id}" %>
+    <%= link_to "Show", book_path(@book.id) %>
      |
-    <%= link_to "Back", "/books" %>
+    <%= link_to "Back", books_path %>
 </span>
