--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,21 +6,21 @@
     <th>Title</th>
     <th>Body</th>
   </thead>
-  
+
   <tbody>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
 
-    <td><%= link_to "Show", "/books/#{book.id}" %></td>
-    <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
-    <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+    <td><%= link_to "Show", book_path(book.id) %></td>
+    <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+    <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
   </tbody>
 </table>
 <% end  %>
 
 
 
-<%= form_with model: @book, url: '/books', method: :post  do |f| %>
+<%= form_with model: @book, url: books_path, method: :post  do |f| %>
 
   <h2>New book</h2>
 
