--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,8 +3,8 @@
 
 
 <span>
-    <%= link_to "Edit", "/books/#{@book.id}/edit" %>
+    <%= link_to "Edit", edit_book_path(@book) %>
      |
-    <%= link_to "Back", "/books" %>
+    <%= link_to "Back", books_path %>
 </span>
 
